--- a/ch11/lounge/lounge.html
+++ b/ch11/lounge/lounge.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Head First Lounge</title>
-    <link type="text/css" rel="stylesheet" href="lounge.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="lounge.css">
 </head>
 
 <body>
@@ -40,6 +40,7 @@
             <a href="beverages/elixir.html" title="Head First Lounge Elixirs">elixirs</a>.
         </p>
     </div>
+
     <h1>Welcome to the Head First Lounge</h1>
     <p>
         The Head First Lounge is, no doubt, the biggest trendsetter in Webville. Stop in to sample the eclectic offering of elixirs, teas, and coffees, or, stay a bit longer and enjoy the multicultural culinary menu that combines a harmony of taste, texture,
@@ -67,22 +68,16 @@
         <a href="about/directions.html" title="Detailed Directions to the Lounge">detailed directions</a> to get you here in record time. No reservations necessary; come and join us anytime.
     </p>
 
-
-
     <h2>What's playing at the Lounge</h2>
-    <p>
+    <p id="amazing">
         We're frequently asked about the music we play at the lounge, and no wonder, it's great stuff. Just for you, we keep a list here on the site, updated weekly. Enjoy.
     </p>
     <ul>
-        <li><span class="cd">Buddha Bar, </span><span class="artist">Claude Challe</span></li>
-        <li><span class="cd">When It Falls, </span><span class="artist">Zero 7</span>
-        </li>
-        <li><span class="cd">Earth 7, </span><span class="artist">L.T.J. Bukem</span>
-        </li>
-        <li><span class="cd">Le Roi Est Mort, </span><span class="artist">Vive Le Roi!, Enigma</span>
-        </li>
-        <li><span class="cd">Music for Airports, </span><span class="artist">Brian Eno</span>
-        </li>
+        <li><span class="cd">Buddha Bar</span>, <span class="artist">Claude Challe</span></li>
+        <li><span class="cd">When It Falls</span>, <span class="artist">Zero 7</span></li>
+        <li><span class="cd">Earth 7</span>, <span class="artist">L.T.J. Bukem</span></li>
+        <li><span class="cd">Le Roi Est Mort, Vive Le Roi!</span>, <span class="artist">Enigma</span></li>
+        <li><span class="cd">Music for Airports</span>, <span class="artist">Brian Eno</span></li>
     </ul>
 
     <div id="footer">
