--- a/ch14/starbuzz/form.html
+++ b/ch14/starbuzz/form.html
@@ -11,7 +11,7 @@
     <h1>The Starbuzz Bean Machine</h1>
     <h2>Fill out the form below and click submit to order</h2>
 
-    <form action="http://starbuzzcoffeee.comprocessorder.php" method="POST">
+    <form action="contest.php" method="POST">
         <p>
             Выберите кофе:
             <select name="beans">
@@ -21,8 +21,28 @@
             <option value="Кения">Кения</option>
             </select>
         </p>
+        <p>
+            Тип: <br>
+            <input type="radio" name="beantype" value="зерна" checked> Кофе в зернах <br>
+            <input type="radio" name="beantype" value="молотый"> Молотый кофе
+        </p>
+        <p>
+            Количество пакетиков: <input type="number" name="bags" min="1" max="10">
+        </p>
+        <p>
+            Доставить к указанной дате: <input type="date" name="date">
+        </p>
+        <p>
+            Дополнительные услуги:<br>
+            <input type="checkbox" name="extras[]" value="подарочная упаковка">Подарочная упаковка
+            <br>
+            <input type="checkbox" name="extras[]" value="каталог" checked="checked">Доставка каталога вместе с заказом
+        </p>
         <p> Ship to: <br> Name: <input type="text" name="name"> <br> Address: <input type="text" name="address"> <br> City: <input type="text" name="city"> <br> Country: <input type="text" name="state"> <br> ZIP code: <input type="text" name="zip"> <br> Phone:
             <input type="tel" name="phone"> <br>
+        </p>
+        <p>Комментарии клиентов:<br>
+            <textarea name="comments"></textarea>
         </p>
         <p>
             <input type="submit" value="Order now">
